--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "@flexi/testnpmpkg",
+  "name": "@gitpullthis/testnpmpkg",
   "version": "1.0.0",
-  "description": "",
+  "description": "No description for this boy",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gitpullthis/testnpmpkg.git"
+    
+  }
 }
